feat: add cors and errorHandler middlewares, integrate express-async-errors

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,7 @@
     },
     "rules": {
       "class-methods-use-this": "off",
-      "camelcase": "off"
+      "camelcase": "off",
+      "import/no-extraneous-dependencies": "off"
     }
 }
